word wrap ON and fixes #155, #156

--- a/src/styles/ui/sidebar.scss
+++ b/src/styles/ui/sidebar.scss
@@ -8,6 +8,8 @@
     background-color: $shared-bg-color;
     color: $shared-text-color;
     height: 100%;
+    display: grid;
+    grid-template-rows: auto auto 1fr;
   }
 /*cells in navbar */
 .wrapper .sidebar aside div[class^='react-flow__node-'] {
